[package]
name = "wgpu_winit_egui_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pollster = { version = "0.3.0", features = ["macro"] }
wgpu = "0.19.1"
winit = "0.29.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.91"
web-sys = { version = "=0.3.67" }
