[package]
name = "wgpu_winit_egui_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "0.19.1"
winit = "0.29.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
#tracing-wasm = { git = "https://github.com/zthompson47/tracing-wasm.git", branch = "formatting" }
tracing-wasm = { path = "/home/zach/allotropic/tracing-wasm" }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "=0.3.67" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { version = "0.3.0", features = ["macro"] }
